--- a/index.html
+++ b/index.html
@@ -5,10 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script defer src="js/app.js"></script>
-    <title>Document</title>
+    <title>Task List</title>
 </head>
 <body>
-    <h1>hello world</h1>
+   <div class="container">
+    <div class="row">
+      <div class="col s12">
+         <div id="main" class="card">
+            <div class="card-content">
+               <span class="card-title">Task List</span>
+               <div class="row">
+                  <form id="task-form">
+                     <div class="input-field col s12">
+                        <input type="text" name="task" id="task">
+                        <label for="task">New Task</label>
+                     </div>
+                     <input type="submit" value="Add Task" class="btn">
+                  </form>
+               </div>
+            </div>
+         </div>
+      </div>
+    </div>
+   </div>
+
+
+
+ 
+
+
+
+    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://kit.fontawesome.com/c755409422.js" crossorigin="anonymous"></script>
 </body>
 </html>
