filter task function added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="card-action">
                <h5 id="task-title">Tasks</h5>
                <div class="input-field col s12">
-                  <input type="text" name="filter" id="filters">
+                  <input type="text" name="filter" id="filter">
                   <label for="filter">Filter Task</label>
                </div>
                <ul class="collection"></ul>
@@ -39,14 +39,8 @@
       </div>
     </div>
    </div>
-
-
-
- 
-
-
-
-    <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+   
+   <script src="https://code.jquery.com/jquery-3.6.1.js" integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="https://kit.fontawesome.com/c755409422.js" crossorigin="anonymous"></script>
 </body>
